Finalizada la cabecera con diseno azul

--- a/blogspot.html
+++ b/blogspot.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div id="cabecera">
-            <p>Cabecera</p>
+            Hyperblog <span id="tagline">Tu blog de confianza</span>
         </div>
         <div id="post">
             <h1>Titulo interesante para todos</h1>
