--- a/blogspot.html
+++ b/blogspot.html
@@ -15,6 +15,10 @@
                 sigan este curso y aprenderan un monton, haremos
                 cosas increibles como hackear la nasa y vender
                 un Tesla en el mercado negro xd.</p>
+                <p>Los blogs son la mejor forma de compartir
+                    informacion y tus ideas. Mucho mas que ir a
+                    coferencias o salir en Youtube. Excepto si eres
+                    un rockstar. Pero estadisticamente no lo eres... por ahora</p>
         </div>
     </div>
 </body>
