Agregue suscripcion, cambie la cabecera maestra y puse todo azul

--- a/blogspot.html
+++ b/blogspot.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div id="cabecera">
-            Hyperblog <span id="tagline">Tu blog de confianza</span>
+            Hyperblog <span id="tagline">Tu blog Master</span>
         </div>
         <div id="post">
             <h1>Titulo interesante para todos</h1>
@@ -22,6 +22,7 @@
                     informacion y tus ideas. Mucho mas que ir a
                     coferencias o salir en Youtube. Excepto si eres
                     un rockstar. Pero estadisticamente no lo eres... por ahora</p>
+                <p>Suscribete y dale like</p>    
         </div>
     </div>
 </body>
