Adding the first content

--- a/blogspot.html
+++ b/blogspot.html
@@ -22,8 +22,25 @@
                     informacion y tus ideas. Mucho mas que ir a
                     coferencias o salir en Youtube. Excepto si eres
                     un rockstar. Pero estadisticamente no lo eres... por ahora</p>
-                <p>Suscribete y dale like</p>    
+                <p>Suscribete y dale like</p>
+
+      
+            <div class="content">
+                <h2>Hello, welcome to the first content</h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing 
+                    elit. Voluptates ad ex labore, quia fugiat totam 
+                    illo eaque? Optio commodi veniam ratione libero 
+                    non temporibus sint voluptatibus beatae excepturi. 
+                    Voluptas, accusantium.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur 
+                        adipisicing elit. Tempora voluptatum 
+                        molestiae dolores rem rerum cum vero odio, 
+                        mollitia perferendis eligendi ducimus est 
+                        similique qui sed quibusdam reiciendis quo 
+                        corporis hic!</p>
+            </div>
         </div>
     </div>
+</div>
 </body>
 </html>
