Fixing the first content

--- a/blogspot.html
+++ b/blogspot.html
@@ -27,6 +27,7 @@
       
             <div class="content">
                 <h2>Hello, welcome to the first content</h2>
+                <h4>About machine learning</h4>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing 
                     elit. Voluptates ad ex labore, quia fugiat totam 
                     illo eaque? Optio commodi veniam ratione libero 
