Fixing the title of the blog

--- a/blogspot.html
+++ b/blogspot.html
@@ -13,7 +13,7 @@
             Hyperblog <span id="tagline">Tu blog de cabecera</span>
         </div>
         <div id="post">
-            <h1>Titulo interesante para todos</h1>
+            <h1>Esto es interesante, leelo!</h1>
             <p>Un parrafo para aprender a programar en git
                 sigan este curso y aprenderan un monton, haremos
                 cosas increibles como hackear la nasa y vender
