Adding the second content

--- a/blogspot.html
+++ b/blogspot.html
@@ -39,6 +39,18 @@
                         mollitia perferendis eligendi ducimus est 
                         similique qui sed quibusdam reiciendis quo 
                         corporis hic!</p>
+                <h4>About IoT</h4>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing 
+                    elit. Voluptates ad ex labore, quia fugiat totam 
+                    illo eaque? Optio commodi veniam ratione libero 
+                    non temporibus sint voluptatibus beatae excepturi. 
+                    Voluptas, accusantium.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur 
+                    adipisicing elit. Tempora voluptatum 
+                    molestiae dolores rem rerum cum vero odio, 
+                    mollitia perferendis eligendi ducimus est 
+                    similique qui sed quibusdam reiciendis quo 
+                    corporis hic!</p>        
             </div>
         </div>
     </div>
