--- a/blogspot.html
+++ b/blogspot.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div id="cabecera">
-            Hyperblog <span id="tagline">Tu blog de confianza</span>
+            Hyperblog <span id="tagline">Tu blog de confianza 2.0</span>
         </div>
         <div id="post">
             <h1>Esto es interesante, leelo!</h1>
