--- a/blogspot.html
+++ b/blogspot.html
@@ -53,6 +53,9 @@
                     corporis hic!</p>        
             </div>
         </div>
+        <div id="footer">
+            Hecho con amor en <strong>CUBE STUDIOS.</strong> &lt;3 
+        </div>
     </div>
 </div>
 </body>
