Agregando una nueva imagen y un gitignore

--- a/blogspot.html
+++ b/blogspot.html
@@ -24,6 +24,10 @@
                     coferencias o salir en Youtube. Excepto si eres
                     un rockstar. Pero estadisticamente no lo eres... por ahora</p>
                 <p>Suscribete y dale like</p>
+                <div id="imagen">
+                    <p><img src="imagenes/she.JPG" width="50%" /></p>
+                    <p>Amor de mi vida, Megan E.</p>
+                </div>
 
       
             <div class="content">
