Modificando la ruta de la imagen y el gitignore

--- a/blogspot.html
+++ b/blogspot.html
@@ -25,7 +25,7 @@
                     un rockstar. Pero estadisticamente no lo eres... por ahora</p>
                 <p>Suscribete y dale like</p>
                 <div id="imagen">
-                    <p><img src="imagenes/she.JPG" width="50%" /></p>
+                    <p><a href="https://imgur.com/bnsR3Wd"><img src="https://i.imgur.com/bnsR3Wd.jpg" title="source: imgur.com" width="50%" /></a></p>
                     <p>Amor de mi vida, Megan E.</p>
                 </div>
 
