Cambio al tagline

--- a/blogspot.html
+++ b/blogspot.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div id="cabecera">
             <img id="logo" src="imagenes/dragon.png" />
-            Hyperblog <span id="tagline">Tu blog de confianza 2.0</span>
+            Hyperblog <span id="tagline">Tu blog de confianza 2.0 siempre</span>
         </div>
         <div id="post">
             <h1>Esto es interesante, leelo con detenimiento!</h1>
