Cambios al tagline y al titulo

--- a/blogspot.html
+++ b/blogspot.html
@@ -14,7 +14,7 @@
             Hyperblog <span id="tagline">Tu blog de confianza 2.0 siempre</span>
         </div>
         <div id="post">
-            <h1>Esto es interesante, leelo con detenimiento!</h1>
+            <h1>Esto es interesante, leelo con detenimiento, te va a gustar!</h1>
             <p>Un parrafo para aprender a programar en git
                 sigan este curso y aprenderan un monton, haremos
                 cosas increibles como hackear la nasa y vender
